--- a/my_list.html
+++ b/my_list.html
@@ -1,8 +1,8 @@
-"Fujifilm"
-"Nikon"
-"Canon"
-"Pentax"
-"Sony"
-"PhaseOne"
-"Hassleblad"
-"Leica"
+<li>"Fujifilm"</li>
+<li>"Nikon"</li>
+<li>"Canon"</li>
+<li>"Pentax"</li>
+<li>"Sony"</li>
+<li>"PhaseOne"</li>
+<li>"Hassleblad"</li>
+<li>"Leica"</li>
